--- a/报名表.md
+++ b/报名表.md
@@ -1,7 +1,7 @@
 # 技术小白报名表
-- 姓名：
-- 性别：
-- 部门：
-- 意向小组：
+- 姓名：赵华磊
+- 性别：男
+- 部门：财务部与人力部
+- 意向小组：shuffle项目组
 
 > PS 目前可选小组见[README](README.md)。可以填写其它感兴趣的技术分组、项目，因为有些负责人还没定题
